--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
+    "@tanstack/react-query": "^5.90.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "recharts": "^3.2.1",
-    "@react-pdf/renderer": "^4.3.1"
+    "react-router-dom": "^6.28.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "rollup": "4.18.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "rollup": "4.18.0"
+    "vite": "^6.2.0"
   }
 }
