--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.5",
+    "@supabase/supabase-js": "^2.45.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.28.0",
